more testing of build process

--- a/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/Dockerfile
+++ b/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/Dockerfile
@@ -1,5 +1,5 @@
-ARG BASE_IMAGE
-FROM ${BASE_IMAGE} AS function
+ARG FUNCTION_BASE_IMAGE
+FROM ${FUNCTION_BASE_IMAGE} AS function
 
 COPY ./CaasIntegration/receiveCaasFile /app/src/dotnet-function-app
 WORKDIR /app/src/dotnet-function-app
