--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -221,8 +221,8 @@ jobs:
           COMPOSE_FILE: ${{ inputs.docker_compose_file }}
           PROJECT_NAME: ${{ inputs.project_name }}
           ACR_NAME: ${{ secrets.acr_name }}
-          # DOTNET_BASE_IMAGE : ${{ needs.build-base-images.outputs.DOTNET_BASE_IMAGE }}
-          # FUNCTION_BASE_IMAGE: ${{ needs.build-base-images.outputs.FUNCTION_BASE_IMAGE }}
+          DOTNET_BASE_IMAGE : ${{ needs.build-base-images.outputs.DOTNET_BASE_IMAGE }}
+          FUNCTION_BASE_IMAGE: ${{ needs.build-base-images.outputs.FUNCTION_BASE_IMAGE }}
         run: |
           function=${{ matrix.function }}
 
@@ -246,13 +246,12 @@ jobs:
           echo "image pulled"
           docker images
 
-          touch .env
-
-          echo "DOTNET_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-dotnet-base:1800" >> .env
-          echo "FUNCTION_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-function-base:1800" >> .env
-
           echo "Running DockerCompose!"
-          docker compose -f ${COMPOSE_FILE//,/ -f } -p ${PROJECT_NAME} --env-file .env --profile "*" build --no-cache --pull ${function}
+          docker compose -f ${COMPOSE_FILE//,/ -f } \
+            -p ${PROJECT_NAME} \
+            --build-arg "DOTNET_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-dotnet-base:1800" \
+            --build-arg "FUNCTION_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-function-base:1800" \
+            --profile "*" build --no-cache --pull ${function}
 
           repo_name="${ACR_NAME}.azurecr.io/${PROJECT_NAME}-${function}"
           echo $(repo_name)
