update base image

--- a/application/CohortManager/src/Functions/Shared/DataServices.Migrations/Dockerfile
+++ b/application/CohortManager/src/Functions/Shared/DataServices.Migrations/Dockerfile
@@ -1,5 +1,5 @@
-ARG DOTNET_BASE_IMAGE
-FROM ${DOTNET_BASE_IMAGE} AS base
+ARG BASE_IMAGE
+FROM $BASE_IMAGE AS base
 
 
 WORKDIR /app/Shared/DataServices.Migrations
