--- a/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/Dockerfile
+++ b/application/CohortManager/src/Functions/CaasIntegration/receiveCaasFile/Dockerfile
@@ -1,5 +1,5 @@
-ARG FUNCTION_BASE_IMAGE
-FROM ${FUNCTION_BASE_IMAGE} AS function
+ARG BASE_IMAGE
+FROM $BASE_IMAGE AS function
 
 COPY ./CaasIntegration/receiveCaasFile /app/src/dotnet-function-app
 WORKDIR /app/src/dotnet-function-app
