--- a/.github/workflows/stage-3-build-images.yaml
+++ b/.github/workflows/stage-3-build-images.yaml
@@ -235,16 +235,15 @@ jobs:
             exit 0
           fi
 
-
-          export DOTNET_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-dotnet-base:1800
-          export FUNCTION_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-function-base:1800
-
-
           docker compose config | grep BASE_IMAGE
           echo "pulling image"
           docker pull "$DOTNET_BASE_IMAGE"
           echo "image pulled"
           docker images
+
+          touch .env
+          echo "DOTNET_BASE_IMAGE=${DOTNET_BASE_IMAGE}" >> .env
+          echo "FUNCTION_BASE_IMAGE=${FUNCTION_BASE_IMAGE}" >> .env
 
           echo "Running DockerCompose!"
           docker compose -f ${COMPOSE_FILE//,/ -f } \
