--- a/application/CohortManager/src/Functions/DemographicServices/ManageNemsSubscription/ManageNemsSubscription.csproj
+++ b/application/CohortManager/src/Functions/DemographicServices/ManageNemsSubscription/ManageNemsSubscription.csproj
@@ -9,10 +9,9 @@
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Azure.Data.Tables" Version="12.10.0" />
     <PackageReference Include="Hl7.Fhir.STU3" Version="4.3.0" />
-    <PackageReference Include="Hl7.Fhir.R4" Version="*" ExcludeAssets="all" />
-    <PackageReference Include="Hl7.Fhir.Base" Version="*" ExcludeAssets="all" />
+    <PackageReference Include="Hl7.Fhir.R4" Version="5.11.4" ExcludeAssets="all" />
+    <PackageReference Include="Hl7.Fhir.Base" Version="5.11.4" ExcludeAssets="all" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.3.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http.AspNetCore" Version="2.0.2" />
