--- a/.github/workflows/cicd-1-pull-request-devtest.yaml
+++ b/.github/workflows/cicd-1-pull-request-devtest.yaml
@@ -86,40 +86,44 @@ jobs:
       python_version: "${{ needs.metadata.outputs.python_version }}"
       terraform_version: "${{ needs.metadata.outputs.terraform_version }}"
       version: "${{ needs.metadata.outputs.version }}"
-  test-stage: # Recommended maximum execution time is 5 minutes
-    name: 'Test stage'
-    needs: [metadata]
-    uses: ./.github/workflows/stage-2-test.yaml
-    with:
-      unit_test_dir: tests/UnitTests
-      app_dir: application/CohortManager
-      build_datetime: '${{ needs.metadata.outputs.build_datetime }}'
-      build_timestamp: '${{ needs.metadata.outputs.build_timestamp }}'
-      build_epoch: '${{ needs.metadata.outputs.build_epoch }}'
-      nodejs_version: '${{ needs.metadata.outputs.nodejs_version }}'
-      python_version: '${{ needs.metadata.outputs.python_version }}'
-      terraform_version: '${{ needs.metadata.outputs.terraform_version }}'
-      version: '${{ needs.metadata.outputs.version }}'
-    secrets: inherit
-  analysis-stage: # Recommended maximum execution time is 5 minutes
-    name: "Analysis stage"
-    needs: [metadata, commit-stage, test-stage]
-    uses: ./.github/workflows/stage-2-analyse.yaml
-    secrets:
-      sonar_token: ${{ secrets.SONAR_TOKEN }}
-    with:
-      unit_test_dir: tests/UnitTests
-      build_datetime: "${{ needs.metadata.outputs.build_datetime }}"
-      build_timestamp: "${{ needs.metadata.outputs.build_timestamp }}"
-      build_epoch: "${{ needs.metadata.outputs.build_epoch }}"
-      nodejs_version: "${{ needs.metadata.outputs.nodejs_version }}"
-      python_version: "${{ needs.metadata.outputs.python_version }}"
-      terraform_version: "${{ needs.metadata.outputs.terraform_version }}"
-      version: "${{ needs.metadata.outputs.version }}"
+  # test-stage: # Recommended maximum execution time is 5 minutes
+  #   name: "Test stage"
+  #   needs: [metadata, commit-stage]
+  #   uses: ./.github/workflows/stage-2-test.yaml
+  #   with:
+  #     unit_test_dir: tests/UnitTests
+  #     app_dir: application/CohortManager
+  #     build_datetime: "${{ needs.metadata.outputs.build_datetime }}"
+  #     build_timestamp: "${{ needs.metadata.outputs.build_timestamp }}"
+  #     build_epoch: "${{ needs.metadata.outputs.build_epoch }}"
+  #     nodejs_version: "${{ needs.metadata.outputs.nodejs_version }}"
+  #     python_version: "${{ needs.metadata.outputs.python_version }}"
+  #     terraform_version: "${{ needs.metadata.outputs.terraform_version }}"
+  #     version: "${{ needs.metadata.outputs.version }}"
+  # analysis-stage: # Recommended maximum execution time is 5 minutes
+  #   name: "Analysis stage"
+  #   needs: [metadata, commit-stage, test-stage]
+  #   uses: ./.github/workflows/stage-2-analyse.yaml
+  #   secrets:
+  #     sonar_token: ${{ secrets.SONAR_TOKEN }}
+  #   with:
+  #     unit_test_dir: tests/UnitTests
+  #     build_datetime: "${{ needs.metadata.outputs.build_datetime }}"
+  #     build_timestamp: "${{ needs.metadata.outputs.build_timestamp }}"
+  #     build_epoch: "${{ needs.metadata.outputs.build_epoch }}"
+  #     nodejs_version: "${{ needs.metadata.outputs.nodejs_version }}"
+  #     python_version: "${{ needs.metadata.outputs.python_version }}"
+  #     terraform_version: "${{ needs.metadata.outputs.terraform_version }}"
+  #     version: "${{ needs.metadata.outputs.version }}"
   build-image-stage: # Recommended maximum execution time is 3 minutes
     name: "Image build stage"
-    needs: [metadata, commit-stage, test-stage, analysis-stage]
+    needs: [metadata, commit-stage] #[metadata, commit-stage, test-stage, analysis-stage]
     uses: ./.github/workflows/stage-3-build-images-devtest.yaml
+    permissions:
+      contents: read
+      id-token: write
+      pull-requests: write
+      packages: write
     secrets:
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
