--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -113,22 +113,22 @@ jobs:
         if: ${{ steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE == 'true' || github.ref == 'refs/heads/main'  }}
         continue-on-error: false
         run: |
-          PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
+          #PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
           SHORT_COMMIT_HASH=$(git rev-parse --short ${GITHUB_SHA})
           echo $SHORT_COMMIT_HASH
           echo $PR_NUM_TAG
 
           docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base:latest .
-          docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
+          #docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
           docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${SHORT_COMMIT_HASH}"
 
           docker build -f Dockerfile.function.base -t cohort-manager-function-base:latest .
-          docker tag cohort-manager-function-base:latest "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
+          #docker tag cohort-manager-function-base:latest "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
           docker tag cohort-manager-function-base:latest "ghcr.io/nhsdigital/cohort-manager-function-base:${SHORT_COMMIT_HASH}"
 
-          docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
+          #docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
           docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${SHORT_COMMIT_HASH}"
-          docker push "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
+          #docker push "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
           docker push "ghcr.io/nhsdigital/cohort-manager-function-base:${SHORT_COMMIT_HASH}"
           if [ "${GITHUB_REF}" == 'refs/heads/main' ]; then
               docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:latest"
