feat: test devtest with new base images

--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -152,7 +152,7 @@ jobs:
 
           echo "The value of FUNCTION_BASE_IMAGE variable"
           echo $FUNCTION_BASE_IMAGE
-          echo "."
+          echo "ghcr.io/nhsdigital/cohort-manager-function-base:"${IMAGE_TAG}
 
 
 
