--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -113,22 +113,22 @@ jobs:
         if: ${{ steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE == 'true' || github.ref == 'refs/heads/main'  }}
         continue-on-error: false
         run: |
-          #PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
+          PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
           SHORT_COMMIT_HASH=$(git rev-parse --short ${GITHUB_SHA})
           echo $SHORT_COMMIT_HASH
           echo $PR_NUM_TAG
 
           docker build -f Dockerfile.dotnet.base -t cohort-manager-dotnet-base:latest .
-          #docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
+          docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
           docker tag cohort-manager-dotnet-base:latest "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${SHORT_COMMIT_HASH}"
 
           docker build -f Dockerfile.function.base -t cohort-manager-function-base:latest .
-          #docker tag cohort-manager-function-base:latest "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
+          docker tag cohort-manager-function-base:latest "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
           docker tag cohort-manager-function-base:latest "ghcr.io/nhsdigital/cohort-manager-function-base:${SHORT_COMMIT_HASH}"
 
-          #docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
+          docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${PR_NUM_TAG}"
           docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:${SHORT_COMMIT_HASH}"
-          #docker push "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
+          docker push "ghcr.io/nhsdigital/cohort-manager-function-base:${PR_NUM_TAG}"
           docker push "ghcr.io/nhsdigital/cohort-manager-function-base:${SHORT_COMMIT_HASH}"
           if [ "${GITHUB_REF}" == 'refs/heads/main' ]; then
               docker push "ghcr.io/nhsdigital/cohort-manager-dotnet-base:latest"
@@ -142,9 +142,9 @@ jobs:
           PR_NUM_TAG=$(echo "${GITHUB_REF}" | sed 's/refs\/pull\/\([0-9]*\)\/merge/\1/')
           IMAGE_TAG="latest"
 
-          # if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
-          #   IMAGE_TAG="${PR_NUM_TAG}"
-          # fi
+          if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
+            IMAGE_TAG="${PR_NUM_TAG}"
+          fi
           echo "Image Tag = ${IMAGE_TAG}"
 
           echo "DOTNET_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-dotnet-base:${IMAGE_TAG}" >> "${GITHUB_OUTPUT}"
@@ -173,6 +173,7 @@ jobs:
       pr_num_tag: ${{ env.PR_NUM_TAG }}
       short_commit_hash: ${{ env.COMMIT_HASH_TAG }}
       devtest_commit_hash: ${{ env.DEVTEST_HASH_TAG }}
+      devtest_pr_num_tag: ${{ env.DEVTEST_PR_NUM_TAG }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -219,13 +220,17 @@ jobs:
           echo "PR_NUM_TAG: pr${PR_NUM_TAG}"
           echo "PR_NUM_TAG=pr${PR_NUM_TAG}" >> ${GITHUB_ENV}
 
+          DEVTEST_PR_NUM_TAG="devtest_${PR_NUM_TAG}"
+          echo "Devtest Pr Num tag: ${DEVTEST_PR_NUM_TAG}"
+          echo "DEVTEST_PR_NUM_TAG=${DEVTEST_PR_NUM_TAG}" >> ${GITHUB_ENV}
+
           SHORT_COMMIT_HASH=$(git rev-parse --short ${GITHUB_SHA})
           echo "Commit hash tag: ${SHORT_COMMIT_HASH}"
           echo "COMMIT_HASH_TAG=${SHORT_COMMIT_HASH}" >> ${GITHUB_ENV}
 
-          DEVTEST_COMMIT_HASH="devtest_${SHORT_COMMIT_HASH}"
-          echo "Commit devtest hash tag: ${DEVTEST_COMMIT_HASH}"
-          echo "DEVTEST_HASH_TAG=${DEVTEST_COMMIT_HASH}" >> ${GITHUB_ENV}
+          # DEVTEST_COMMIT_HASH="devtest_${SHORT_COMMIT_HASH}"
+          # echo "Commit devtest hash tag: ${DEVTEST_COMMIT_HASH}"
+          # echo "DEVTEST_HASH_TAG=${DEVTEST_COMMIT_HASH}" >> ${GITHUB_ENV}
 
           echo "ENVIRONMENT_TAG=${ENVIRONMENT_TAG}" >> ${GITHUB_ENV}
 
@@ -256,8 +261,8 @@ jobs:
 
           # Tag the image
           echo "Tag the image:"
-          docker tag ${PROJECT_NAME}-${function}:latest "$repo_name:${DEVTEST_HASH_TAG}"
-          # docker tag ${PROJECT_NAME}-${function}:latest "$repo_name:${PR_NUM_TAG}"
+          #docker tag ${PROJECT_NAME}-${function}:latest "$repo_name:${DEVTEST_HASH_TAG}"
+          docker tag ${PROJECT_NAME}-${function}:latest "$repo_name:${DEVTEST_PR_NUM_TAG}"
           # docker tag ${PROJECT_NAME}-${function}:latest "$repo_name:${ENVIRONMENT_TAG}"
 
           # If this variable is set, the create-sbom-report.sh script will scan this docker image instead.
@@ -268,7 +273,7 @@ jobs:
           echo "PR_NUM_TAG=${PR_NUM_TAG}" >> ${GITHUB_ENV}
 
           # Push the image to the repository
-          docker push "${repo_name}:${DEVTEST_HASH_TAG}"
+          docker push "${repo_name}:${DEVTEST_PR_NUM_TAG}"
 
       - name: Cleanup the docker images
         env:
@@ -279,7 +284,7 @@ jobs:
           repo_name="${ACR_NAME}.azurecr.io/${PROJECT_NAME}-${function}"
 
           # Remove the images
-          docker rmi "${repo_name}:${DEVTEST_HASH_TAG}"
-          # docker rmi "${repo_name}:${PR_NUM_TAG}"
+          # docker rmi "${repo_name}:${DEVTEST_HASH_TAG}"
+          docker rmi "${repo_name}:${DEVTEST_PR_NUM_TAG}"
           # docker rmi "${repo_name}:${ENVIRONMENT_TAG}"
           docker rmi ${PROJECT_NAME}-${function}:latest
