--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -65,7 +65,7 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           # Find the PR associated with the current commit SHA
-          PR_NUM_TAG=$(gh pr list --sha ${{ github.sha }} --state all --json number --jq '.[0].number')
+          PR_NUM_TAG=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
 
           if [ -z "$PR_NUM_TAG" ]; then
             echo "No PR found for this tag push."
@@ -114,6 +114,7 @@ jobs:
       pull-requests: read
       id-token: write
       packages: write
+    needs: [get-functions, get-pr-number]
     outputs:
       DOTNET_BASE_IMAGE: ${{ steps.set-image-tags.outputs.DOTNET_BASE_IMAGE }}
       FUNCTION_BASE_IMAGE:  ${{ steps.set-image-tags.outputs.FUNCTION_BASE_IMAGE }}
