--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -65,13 +65,16 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           # Find the PR associated with the current commit SHA
-          PR_NUM_TAG=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
+          PR_NUM=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
 
-          if [ -z "$PR_NUM_TAG" ]; then
+          if [ -z "$PR_NUM" ]; then
             echo "No PR found for this tag push."
-            echo "PR_NUM_TAG=null" >> $GITHUB_OUTPUT
+            echo "PR_NUM=null" >> $GITHUB_OUTPUT
           else
-            echo "Found PR: $PR_NUM_TAG"
+            echo "Found PR: $PR_NUM"
+            PR_NUM_TAG="pr${PR_NUM}"
+            echo "PR tag: $PR_NUM_TAG"
+
             echo "PR_NUM_TAG=$PR_NUM_TAG" >> $GITHUB_OUTPUT
           fi
 
@@ -144,7 +147,6 @@ jobs:
         if: ${{ steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE == 'true' || github.ref == 'refs/heads/main'  }}
         continue-on-error: false
         run: |
-          PR_NUM_TAG=pr${PR_NUM_TAG}
           SHORT_COMMIT_HASH=$(git rev-parse --short ${GITHUB_SHA})
           echo $SHORT_COMMIT_HASH
           echo $PR_NUM_TAG
@@ -171,7 +173,6 @@ jobs:
         id: set-image-tags
         run: |
 
-          PR_NUM_TAG=pr${PR_NUM_TAG}
           IMAGE_TAG="latest"
 
           # if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
@@ -202,7 +203,6 @@ jobs:
         function: ${{ fromJSON(needs.get-functions.outputs.FUNC_NAMES) }}
     if: needs.get-functions.outputs.FUNC_NAMES != '[]'
     outputs:
-      # pr_num_tag: ${{ env.PR_NUM_TAG }}
       short_commit_hash: ${{ env.COMMIT_HASH_TAG }}
       devtest_commit_hash: ${{ env.DEVTEST_HASH_TAG }}
       devtest_pr_num_tag: ${{ env.DEVTEST_PR_NUM_TAG }}
@@ -248,9 +248,6 @@ jobs:
           #   echo "ORIGINATING_BRANCH: ${ORIGINATING_BRANCH}"
           #   PR_NUM_TAG=$(echo ${PULLS_JSON} | jq -r '.[].number')
           # fi
-
-          echo "PR_NUM_TAG: pr${PR_NUM_TAG}"
-          # echo "PR_NUM_TAG=pr${PR_NUM_TAG}" >> ${GITHUB_ENV}
 
           DEVTEST_PR_NUM_TAG="devtest_${PR_NUM_TAG}"
           echo "Devtest Pr Num tag: ${DEVTEST_PR_NUM_TAG}"
