--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -52,7 +52,7 @@ jobs:
       pull-requests: read
       contents: read
     outputs:
-      PR_NUM_TAG: ${{ env.PR_NUM_TAG }}
+      PR_NUM_TAG: ${{ steps.get_pr_num.PR_NUM_TAG }}
     steps:
       - uses: actions/checkout@v4
         with:
