--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -46,38 +46,6 @@ on:
 
 jobs:
 
-  get-pr-number:
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: read
-      contents: read
-    outputs:
-      PR_NUM_TAG: ${{ steps.get_pr_num.PR_NUM_TAG }}
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 2
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Fetch PR Number
-        id: get_pr_num
-        env:
-          GH_TOKEN: ${{ github.token }}
-        run: |
-          # Find the PR associated with the current commit SHA
-          PR_NUM=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
-
-          if [ -z "$PR_NUM" ]; then
-            echo "No PR found for this tag push."
-            echo "PR_NUM=null" >> $GITHUB_OUTPUT
-          else
-            echo "Found PR: $PR_NUM"
-            PR_NUM_TAG="pr${PR_NUM}"
-            echo "PR tag: $PR_NUM_TAG"
-
-            echo "PR_NUM_TAG=$PR_NUM_TAG" >> $GITHUB_OUTPUT
-          fi
-
   get-functions:
     runs-on: ubuntu-latest
     permissions:
@@ -117,10 +85,11 @@ jobs:
       pull-requests: read
       id-token: write
       packages: write
-    needs: [get-functions, get-pr-number]
+    needs: [get-functions]
     outputs:
       DOTNET_BASE_IMAGE: ${{ steps.set-image-tags.outputs.DOTNET_BASE_IMAGE }}
       FUNCTION_BASE_IMAGE:  ${{ steps.set-image-tags.outputs.FUNCTION_BASE_IMAGE }}
+
     steps:
       - uses: actions/checkout@v4
         with:
@@ -146,10 +115,11 @@ jobs:
         working-directory: ./
         if: ${{ steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE == 'true' || github.ref == 'refs/heads/main'  }}
         continue-on-error: false
-        env:
-          PR_NUM_TAG : ${{ needs.get-pr-number.outputs.PR_NUM_TAG }}
         run: |
           SHORT_COMMIT_HASH=$(git rev-parse --short ${GITHUB_SHA})
+          PR_NUM=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
+          PR_NUM_TAG="pr${PR_NUM}"
+
           echo $SHORT_COMMIT_HASH
           echo $PR_NUM_TAG
           echo $GITHUB_REF
@@ -173,10 +143,10 @@ jobs:
 
       - name: Set Image Tags
         id: set-image-tags
-        env:
-          PR_NUM_TAG : ${{ needs.get-pr-number.outputs.PR_NUM_TAG }}
         run: |
 
+          PR_NUM=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
+          PR_NUM_TAG="pr${PR_NUM}"
           IMAGE_TAG="latest"
 
           # if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
@@ -201,7 +171,7 @@ jobs:
       id-token: write
       contents: read
       pull-requests: read
-    needs: [get-functions, build-base-images, get-pr-number]
+    needs: [get-functions, build-base-images]
     strategy:
       matrix:
         function: ${{ fromJSON(needs.get-functions.outputs.FUNC_NAMES) }}
@@ -240,7 +210,6 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
           ENVIRONMENT_TAG: ${{ inputs.environment_tag }}
-          PR_NUM_TAG : ${{ needs.get-pr-number.outputs.PR_NUM_TAG }}
         continue-on-error: false
         run: |
           echo "The branch is: ${GITHUB_REF}"
@@ -253,6 +222,8 @@ jobs:
           #   echo "ORIGINATING_BRANCH: ${ORIGINATING_BRANCH}"
           #   PR_NUM_TAG=$(echo ${PULLS_JSON} | jq -r '.[].number')
           # fi
+          PR_NUM=$(gh api repos/${{ github.repository }}/commits/${{ github.sha }}/pulls --jq '.[0].number')
+          PR_NUM_TAG="pr${PR_NUM}"
 
           DEVTEST_PR_NUM_TAG="devtest_${PR_NUM_TAG}"
           echo "Devtest Pr Num tag: ${DEVTEST_PR_NUM_TAG}"
@@ -275,7 +246,6 @@ jobs:
           COMPOSE_FILE: ${{ inputs.docker_compose_file }}
           PROJECT_NAME: ${{ inputs.project_name }}
           ACR_NAME: ${{ secrets.acr_name }}
-          PR_NUM_TAG : ${{ needs.get-pr-number.outputs.PR_NUM_TAG }}
         run: |
           function=${{ matrix.function }}
 
