--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -158,11 +158,18 @@ jobs:
           # fi
           echo "Image Tag = ${IMAGE_TAG}"
 
-          echo "DOTNET_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-dotnet-base:${IMAGE_TAG}" >> "${GITHUB_OUTPUT}"
-          echo "FUNCTION_BASE_IMAGE=ghcr.io/nhsdigital/cohort-manager-function-base:${IMAGE_TAG}" >> "${GITHUB_OUTPUT}"
+          DOTNET_BASE_IMAGE="ghcr.io/nhsdigital/cohort-manager-dotnet-base:${IMAGE_TAG}"
+          FUNCTION_BASE_IMAGE="ghcr.io/nhsdigital/cohort-manager-function-base:${IMAGE_TAG}"
 
-          echo "The value of FUNCTION_BASE_IMAGE variable"
+          echo "DOTNET_BASE_IMAGE=${DOTNET_BASE_IMAGE}" >> "${GITHUB_OUTPUT}"
+          echo "FUNCTION_BASE_IMAGE=${FUNCTION_BASE_IMAGE}" >> "${GITHUB_OUTPUT}"
+
+          echo $PR_NUM_TAG
+          echo "The value of FUNCTION_BASE_IMAGE variable:"
           echo $FUNCTION_BASE_IMAGE
+
+          echo "The value of DOTNET_BASE_IMAGE variable:"
+          echo $DOTNET_BASE_IMAGE
           echo "ghcr.io/nhsdigital/cohort-manager-function-base:"${IMAGE_TAG}
 
 
