--- a/.github/workflows/stage-3-build-images-devtest.yaml
+++ b/.github/workflows/stage-3-build-images-devtest.yaml
@@ -156,7 +156,9 @@ jobs:
           # if [[ ${{steps.detect-base-image-changes.outputs.BASE_IMAGE_CHANGE}} == 'true' ]]; then
           #   IMAGE_TAG="${PR_NUM_TAG}"
           # fi
-          echo "Image Tag = ${IMAGE_TAG}"
+          # echo "Image Tag = ${IMAGE_TAG}"
+
+          IMAGE_TAG="${PR_NUM_TAG}"
 
           DOTNET_BASE_IMAGE="ghcr.io/nhsdigital/cohort-manager-dotnet-base:${IMAGE_TAG}"
           FUNCTION_BASE_IMAGE="ghcr.io/nhsdigital/cohort-manager-function-base:${IMAGE_TAG}"
