Revert "feat: manual add fixes (#1809)"
This reverts commit 1cc31cdd45cdd9d3ec7cf98af0d01bc797894296.

--- a/application/CohortManager/compose.deps.yaml
+++ b/application/CohortManager/compose.deps.yaml
@@ -43,7 +43,7 @@ services:
   db:
     container_name: db
     networks: [cohman-network]
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/mssql/server
     environment:
       - ACCEPT_EULA=Y
       - MSSQL_SA_PASSWORD=${PASSWORD}
